棋盘修改为展示图片，加快了速度
